Changed the 1st question

--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -37,7 +37,8 @@
     "id": "h6V7QbAN6BIt"
    },
    "source": [
-    "With a model of order higher than that of reality, it can better fit to our data (that has a certain variance), making its training RSS smaller than what would otherwise be obtained with a model with the actual order (in this case, linear). Taking this into account, <u>the training RSS will be higher for the linear model</u>, when comparing with the cubic one. "
+    "A model with higher order than another model, will have a bigger flexiblity and so does a better fit to the trainning data, making its training RSS smaller when compared with a model with lower order. Taking this into account, <u>the training RSS will be higher for the linear model</u>, when compared with the cubic one. \n",
+    "\n"
    ]
   },
   {
@@ -55,8 +56,9 @@
     "id": "8Ng5yyIL7sUE"
    },
    "source": [
+    "In this case, we know that the actual relation between X and Y is linear. So the true f is a linear function, meaning that there is only a small decrease in bias as flexibility increases (i.e., the order of the model increases), and the test RSS declines slightly before increasing rapidly as the variance increases, therefore, the linear model will produce more accurate predictions when compared to the cubic model. Consequently, it is expected that <u>the test RSS will be smaller for the linear model, when compared to the cubic one</u>.\n",
     "\n",
-    "In this case, we know that the actual relation between X and Y is linear. Any model of order higher than this will overfit to the test data, making its test RSS greater than that of a linear model, since the latter has an order similar to that of reality. Therefore, it is expected that <u>the test RSS will be smaller for the linear model, when compared to the cubic one</u>."
+    "\n"
    ]
   },
   {
@@ -74,7 +76,7 @@
     "id": "l3JRaXd28SUz"
    },
    "source": [
-    "In this case, we don't have enough information to know the actual relation between X and Y. That being said, the order could be either fractional (above 1), quadratic, cubic or any other of higher order. Since the cubic model has a higher order it will fit better to the data, regardless of the order of the relation between X and Y, when comparing with the linear model. In conclusion, <u>the training RSS is higher for the linear model</u>, in comparision with the cubic model."
+    "In this case, we don't have enough information to know the actual relation between X and Y. That being said, the order could be either fractional (above 1), quadratic, cubic or any other of higher order. Since the cubic model has a higher order it will fit better to the data, regardless of the order of the relation between X and Y, when comparing with the linear model(it has a more flexibility). In conclusion, <u>the training RSS is higher for the linear model</u>, in comparision with the cubic model."
    ]
   },
   {
@@ -92,7 +94,7 @@
     "id": "FWjI9xe36tk2"
    },
    "source": [
-    "As stated before, in this case we don't the order of the relation between X and Y, but the cubic model will always be more complex than the linear model regardless of the order of the relation between X and Y. This complexity will make the cubic model better fit the trainning data, but it will also make it overfit the test data, in the other hand, the linear model is less complex and therefore will have a worse fit of the data, but it will perfom better with the testing data. In short, <u> the testing RSS will be smaller for the linear model </u>, in comparision with the cubic model."
+    "As stated before, in this case we don't know the order of the relation between X and Y, so we can't fully access the Bias-Variance Tradeoff, because if the true relation between X and Y is close to linear, there will be only a small decrease in bias as flexibility increases, ando so the test RSS declines slighty before increasing rapidly. But if the true realtion between X and Y is cubic for example, the linear model will be too biased to produce very accurate results. In short, <u> we don't have enoguh information </u> to compare the test RSS between the models, in comparision with the cubic model. \n"
    ]
   },
   {
@@ -372,6 +374,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "COMMENT: The $R^2$ expresses how much variance of the data is explaneid by the linear model. Therefore, high values of $R^2$ are desirable and symbolize that the X and Y related. In this case we got a $R^2$ = 0.7621, a high value for $R^2$, which means that linear model explaines 76.21% variance of the data (Y) through the predictors (X).  As a result, flipper_length_mm  as a good choice of predictor.\n",
+    "\n",
+    "https://pt.wikipedia.org/wiki/Coeficiente_de_determina%C3%A7%C3%A3o"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "yRYL0_TeQQfp"
    },
@@ -440,6 +451,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "COMMENT: The model predicted a body mass of -3364.43 kg, which is impossible. This was due to the training data that was used. In this dataset there were only data from adult penguins, in turn, the model obtained will be only suitable for the adult penguins and not for the baby penguins. This explains the negative value for the mass of the baby penguin. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**2.h)** Perform a multiple linear regression considering `body_mass_g` as the response and using all numerical predictors. Compare the $R^2$ of the simple linear regression model and the multiple linear regression model."
    ]
   },
@@ -470,6 +488,13 @@
     "body_mass_g_pred = regr.predict(X)\n",
     "r2_value = r2_score(y, body_mass_g_pred)\n",
     "print('R^2: {:.4f}'.format(r2_value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "COMMENT: The model with all the numeric predictors got a $R^2$ = 0.7639, in the other hand, the model with only one predictor got a $R^2$ = 0.7621. The diference is minimal, which may mean that the model with all the numerical predictor has useless predictors (i.e., predictors that aren't very related or related at all with Y)."
    ]
   },
   {
@@ -521,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "COMMENT: $R^2$ being greater than the previous one makes sense, since more variables are being used for the linear regression, akin to the effect an overfitting would have."
+    "COMMENT: This model has the biggest $R^2$ considering the previous models discussed, this means that the are some non-numerical predictors that very related with Y and, consequently,  it increased the value of $R^2$."
    ]
   },
   {
