Some changes in the english

--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -55,7 +55,7 @@
     "id": "8Ng5yyIL7sUE"
    },
    "source": [
-    "In this case, we know that the actual relation between X and Y is linear. So the true regression function is linear, meaning that there is only a small decrease in bias as flexibility increases (i.e., the order of the model increases), and so does the test RSS decline slightly before rapidly increasing as the variance increases. Therefore, the linear model will produce more accurate predictions when compared to the cubic model. Consequently, it is expected that <u>the test RSS will be smaller for the linear model, when compared to the cubic one</u>."
+    "In this case, we know that the actual relation between X and Y is linear. So the true regression function is linear, meaning that there is only a small decrease in bias as flexibility increases (i.e., the order of the model increases), and so the test RSS decline slightly before rapidly increasing as the variance increases. Therefore, the linear model will produce more accurate predictions when compared to the cubic model. Consequently, it is expected that <u>the test RSS will be smaller for the linear model, when compared to the cubic one</u>."
    ]
   },
   {
@@ -73,7 +73,7 @@
     "id": "l3JRaXd28SUz"
    },
    "source": [
-    "In this case, we don't have enough information to know the actual relation between X and Y. That being said, the order could either be fractional (but above 1), quadratic, cubic or take any other higher value. Since the cubic model has a higher order, it will fit better to the data, regardless of the order of the relation between X and Y, when comparing with the linear model (it has a more flexibility). In conclusion, <u>the training RSS is higher for the linear model</u>, in comparision with the cubic model."
+    "In this case, we don't have enough information to know the actual relation between X and Y. That being said, the order could either be fractional (but above 1), quadratic, cubic or take any other higher value. Since the cubic model has a higher order, it will fit better to the data, regardless of the order of the relation between X and Y, when comparing with the linear model . In conclusion, <u>the training RSS is higher for the linear model</u>, in comparision with the cubic model."
    ]
   },
   {
