--- a/Assignment 1 23-24.ipynb
+++ b/Assignment 1 23-24.ipynb
@@ -572,7 +572,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In the context of new observations, test error is what is most important to be minimized. In that sense, based on the error rates that were given, the procedure with the lowest (albeit averaged) test error rate is the <u>1-nearest neighbors</u>. Therefore, this classification method will be preferred for classifying new observations. Additionally, it is worth noting that, although its bias will be low, the 1-nearest neighbors method may yield results with high variance, since $k$ is low ($k=1$)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1258,7 +1260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
