Final version v2 (compatible with Google Colab)

--- a/Assignment_1_23_24.ipynb
+++ b/Assignment_1_23_24.ipynb
@@ -91,7 +91,7 @@
         "id": "FWjI9xe36tk2"
       },
       "source": [
-        "As stated before, in this case we don't know the order of the relation between X and Y, so we can't fully assess the Bias-Variance Tradeoff, because, if the true relation between X and Y is close to linear, there will only be a small decrease in bias as flexibility increases, and so the test RSS declines slighty before rapidly increasing. But if the true relation between X and Y is, for instance, cubic, the linear model will be too biased to produce very accurate results. In short, <u> we don't have enough information </u> to compare the test RSS between the linear and cubic models."
+        "As stated before, in this case we don't know the order of the relation between X and Y, so we can't fully assess the Bias-Variance Tradeoff, because, if the true relation between X and Y is close to linear, there will only be a small decrease in bias as flexibility increases, and so the test RSS declines slighty before rapidly increasing. But if the true relation between X and Y is, for instance, cubic, the linear model will be too biased to produce very accurate results. In short, <u> we don't have enough information</u> to compare the test RSS between the linear and cubic models."
       ]
     },
     {
@@ -101,6 +101,30 @@
       },
       "source": [
         "**2.** Consider now the Palmer Archipelago penguin data. It consists of physical measurements of male and female adult penguins from three species that live in three different islands of the Palmer Archipelago in Antarctica."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/drive\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lt4AhkoX76aq",
+        "outputId": "75dccc34-28bc-479c-af7c-a6462e4f7711"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
       ]
     },
     {
@@ -114,14 +138,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "UJxs-3Vp9IhJ",
-        "outputId": "7b53ba84-38d9-4ba4-c79c-927e2f45d874"
+        "outputId": "2612cbe5-627d-495c-f4cb-779c2eb7e9be"
       },
       "outputs": [
         {
@@ -144,7 +168,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-35eaf89f-b182-4e7f-8bf9-6b15b22dafad\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6576718a-898b-470c-a41c-5018a38a31b6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -229,7 +253,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35eaf89f-b182-4e7f-8bf9-6b15b22dafad')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6576718a-898b-470c-a41c-5018a38a31b6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -281,12 +305,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-35eaf89f-b182-4e7f-8bf9-6b15b22dafad button.colab-df-convert');\n",
+              "        document.querySelector('#df-6576718a-898b-470c-a41c-5018a38a31b6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-35eaf89f-b182-4e7f-8bf9-6b15b22dafad');\n",
+              "        const element = document.querySelector('#df-6576718a-898b-470c-a41c-5018a38a31b6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -306,8 +330,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-8cfe6a8e-bc4b-4127-9b4a-57a6e161149b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8cfe6a8e-bc4b-4127-9b4a-57a6e161149b')\"\n",
+              "<div id=\"df-5b2669cf-ce8d-4a90-8179-d0ef702c045a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5b2669cf-ce8d-4a90-8179-d0ef702c045a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -426,7 +450,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-8cfe6a8e-bc4b-4127-9b4a-57a6e161149b button');\n",
+              "        document.querySelector('#df-5b2669cf-ce8d-4a90-8179-d0ef702c045a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -437,7 +461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 60
         }
       ],
       "source": [
@@ -463,14 +487,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 61,
       "metadata": {
         "id": "O9lTwg2pfkBD",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 676
         },
-        "outputId": "ff960a58-0550-47d4-b330-b5b86c493679"
+        "outputId": "9dd3ae92-1c05-41c1-aa9b-b226fb428724"
       },
       "outputs": [
         {
@@ -523,7 +547,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f5a9b6f0-7181-4115-86b1-bad55a75b3b7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1810ec71-eb79-4760-b228-e9e1964f8682\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -758,7 +782,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f5a9b6f0-7181-4115-86b1-bad55a75b3b7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1810ec71-eb79-4760-b228-e9e1964f8682')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -810,12 +834,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f5a9b6f0-7181-4115-86b1-bad55a75b3b7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1810ec71-eb79-4760-b228-e9e1964f8682 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f5a9b6f0-7181-4115-86b1-bad55a75b3b7');\n",
+              "        const element = document.querySelector('#df-1810ec71-eb79-4760-b228-e9e1964f8682');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -835,8 +859,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e8647347-679b-423b-96ba-2501a21701f3\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e8647347-679b-423b-96ba-2501a21701f3')\"\n",
+              "<div id=\"df-926d6566-57f9-4947-aba5-ea3e4bbfdc4f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-926d6566-57f9-4947-aba5-ea3e4bbfdc4f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -955,7 +979,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e8647347-679b-423b-96ba-2501a21701f3 button');\n",
+              "        document.querySelector('#df-926d6566-57f9-4947-aba5-ea3e4bbfdc4f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -966,7 +990,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 61
         }
       ],
       "source": [
@@ -985,13 +1009,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JRv_C6HQfkBD",
-        "outputId": "16862c3b-161a-4055-82ad-bfa865dc97be"
+        "outputId": "4a02bc6f-eb0b-4770-ac79-a3ea9bbd13ff"
       },
       "outputs": [
         {
@@ -1029,14 +1053,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "jA38faWBfkBE",
-        "outputId": "e9d4850d-f5a1-4eaa-f5a3-5858e5eadadc"
+        "outputId": "1a86a2ba-12c3-4d5a-fa77-4ba4417249bd"
       },
       "outputs": [
         {
@@ -1071,13 +1095,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 64,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "teI35X_p9TAM",
-        "outputId": "50ebfbbd-8cff-4f55-abcb-28b3b69bdd8e"
+        "outputId": "cd96ae06-18e9-4511-bb98-264a7f8c46fa"
       },
       "outputs": [
         {
@@ -1126,14 +1150,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 65,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 522
         },
         "id": "S7QpN6n1APVa",
-        "outputId": "72bc72ef-dccb-43f8-e373-fc0f1618bc9d"
+        "outputId": "c0b179d6-4f0e-478c-8e0e-6a54d1a840cb"
       },
       "outputs": [
         {
@@ -1167,13 +1191,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-HgQ3LyXfkBF",
-        "outputId": "7b6475cb-0b4b-472c-df01-f87365996553"
+        "outputId": "0c923d8c-6357-4d9f-a19e-70151ea042ce"
       },
       "outputs": [
         {
@@ -1213,13 +1237,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 67,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mVx-mIbTfkBF",
-        "outputId": "c9c57524-92c5-4800-dbb9-4119d84e7eb7"
+        "outputId": "97f384e0-13c6-479f-b665-310bec61c8b7"
       },
       "outputs": [
         {
@@ -1266,13 +1290,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 68,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "O8qDSjIMfkBG",
-        "outputId": "eda11b37-c59c-42e7-a37a-41def64886a7"
+        "outputId": "7ec58d4e-689b-4b0e-aef2-40022b28e834"
       },
       "outputs": [
         {
@@ -1375,13 +1399,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 69,
       "metadata": {
         "id": "Zmk2OAC3w-W6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1df3acd2-46e3-4df8-b795-1a975163aed4"
+        "outputId": "a2748898-3602-480e-ec71-187279669689"
       },
       "outputs": [
         {
@@ -1424,13 +1448,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bQquLCRDyizP",
-        "outputId": "e0142cc1-224b-472c-d19b-cde9cc77378f"
+        "outputId": "22591313-7bd0-4318-9013-b1c9016f33a7"
       },
       "outputs": [
         {
@@ -1513,13 +1537,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bvzDUm5sze_l",
-        "outputId": "863e5ba7-71f4-4d75-e5ae-77b49ea16e9f"
+        "outputId": "62588c53-454d-4d0e-a877-a4a05b59d955"
       },
       "outputs": [
         {
@@ -1596,13 +1620,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 72,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7oVkI9QUzufY",
-        "outputId": "ca833684-9d1f-41e2-db17-e0beef6aadbc"
+        "outputId": "a1d94cfc-e4aa-489e-988b-f1bd27cdd2a2"
       },
       "outputs": [
         {
@@ -1664,13 +1688,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 73,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "U6pzjPGc1y_t",
-        "outputId": "61e1a6fa-84b1-4b52-f53b-a0d9706c4397"
+        "outputId": "3c4b9821-9aec-42a3-9848-de4494ecd1e1"
       },
       "outputs": [
         {
@@ -1745,14 +1769,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "KCXGQmN52G7W",
-        "outputId": "4af6e99b-8589-4b2b-c838-a275798111eb"
+        "outputId": "b2da1385-1b14-49de-88b9-31fe9997e386"
       },
       "outputs": [
         {
@@ -1881,14 +1905,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 75,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 646
         },
         "id": "iNXZovNn8Wlv",
-        "outputId": "1514d01d-d38c-4b17-964b-cec470e11cc8"
+        "outputId": "651df6a1-7a20-42ce-c8b5-a8104678bd08"
       },
       "outputs": [
         {
